# tetris

./: CMakeLists.txt  CMakeSettings.json  README.md  launch.vs.json
mut-1.00a/: CHANGES  Makefile  Makefile.series60  Makefile.series80  Mut.rss  TODO  comp.cpp  comp.h  config.txt  icon.UIQ.mbm  icon.series60.mbm  mut.cpp  mut.h  mut.hrh  play.cpp  play.h  tetris.aifspec  util.cpp  util.h
